<resources>
    <string name="app_name">Midterm 07590534</string>
    <string name="password">password</string>
    <string name="login_to_facebook">login to facebook</string>
    <string name="username">username</string>
    <string name="login">login</string>
    <string name="add_to_story">Add to Story</string>
    <string name="view_as">View As</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="more">More</string>
    <string name="goes_to">Goes to</string>
    <string name="lives_in">Lives in</string>
    <string name="from">From</string>
</resources>
